test/users/engin/sparse_bulk_dist/sparseBulkBoundsCheck.good
sparseBulkBoundsCheck.chpl:20: error: halt reached - Sparse domain/array index out of bounds: (8, 8) (expected to be within {0..7, 0..7})
